--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <div class="grid-item">
                 <br><br><br>
                 <h1 id="name" >Abdulhameed Khamis Mohamed Aljaradi</h1>
-                <p>Software Developer</p>
+                <p>Computer Programmer</p>
             </div>
         </div>
     </section>
