--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                 <img  src="imgs/certificate_icon.jpg" alt="Boss" style="width:60%" class="w3-circle w3-hover-opacity" >
             </div>
             <div class="grid-item">
+                <h2 id="name" > International Business Machines Corporation (IBM)</h2>
+                <h3>Introduction to Web Development with HTML5, CSS3, and JavaScript, 2023</h3>
                 <h2 id="name" > University Of Mysore, India</h2>
                 <h3>Best Project in the Department of Computer Science </h3>
                 <h2>"Controlling Open-Source Drone Using Artificial Intelligence", 2022.</h2>
@@ -128,7 +130,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                     Full-stack developing (Front-End & Back-End)
                 </div>
                 <div class="grid-item">
-                    Programming Languages: C#, C, Java, python, HTML, CSS, javascript, SQL, ASP.NET
+                    Programming Languages: C#, C, Java, python, HTML, CSS, javascript, SQL, ASP.NET Framework
                 </div>
                 <div class="grid-item">
                     Building Local Area Network
