--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                     Full-stack developing (Front-End & Back-End)
                 </div>
                 <div class="grid-item">
-                    Programming Languages: C#, C, Java, python, HTML, CSS, javascript, SQL, ASP.NET Framework
+                    Programming Languages: C#, C, Java, python, HTML, CSS, javascript, MySQL, ASP.NET Framework
                 </div>
                 <div class="grid-item">
                     Building Local Area Network
